@@ -17,40 +17,7 @@
 #include <caml/signals.h>
 #include "unixsupport.h"
 
-#ifdef HAS_UTIME
-
-#include <sys/types.h>
-#ifndef _WIN32
-#include <utime.h>
-#else
-#include <sys/utime.h>
-#endif
-
-CAMLprim value unix_utimes(value path, value atime, value mtime)
-{
-  CAMLparam3(path, atime, mtime);
-  struct utimbuf times, * t;
-  char * p;
-  int ret;
-  caml_unix_check_path(path, "utimes");
-  times.actime = Double_val(atime);
-  times.modtime = Double_val(mtime);
-  if (times.actime || times.modtime)
-    t = &times;
-  else
-    t = (struct utimbuf *) NULL;
-  p = caml_strdup(String_val(path));
-  caml_enter_blocking_section();
-  ret = utime(p, t);
-  caml_leave_blocking_section();
-  caml_stat_free(p);
-  if (ret == -1) uerror("utimes", path);
-  CAMLreturn(Val_unit);
-}
-
-#else
-
-#ifdef HAS_UTIMES
+#if defined(HAS_UTIMES)
 
 #include <sys/types.h>
 #include <sys/time.h>
@@ -65,17 +32,53 @@ CAMLprim value unix_utimes(value path, value atime, value mtime)
   caml_unix_check_path(path, "utimes");
   at = Double_val(atime);
   mt = Double_val(mtime);
-  tv[0].tv_sec = at;
-  tv[0].tv_usec = (at - tv[0].tv_sec) * 1000000;
-  tv[1].tv_sec = mt;
-  tv[1].tv_usec = (mt - tv[1].tv_sec) * 1000000;
-  if (tv[0].tv_sec || tv[1].tv_sec)
-    t = tv;
-  else
+  if (at == 0.0 && mt == 0.0) {
     t = (struct timeval *) NULL;
+  } else {    
+    tv[0].tv_sec = at;
+    tv[0].tv_usec = (at - tv[0].tv_sec) * 1000000;
+    tv[1].tv_sec = mt;
+    tv[1].tv_usec = (mt - tv[1].tv_sec) * 1000000;
+    t = tv;
+  }
   p = caml_strdup(String_val(path));
   caml_enter_blocking_section();
   ret = utimes(p, t);
+  caml_leave_blocking_section();
+  caml_stat_free(p);
+  if (ret == -1) uerror("utimes", path);
+  CAMLreturn(Val_unit);
+}
+
+#elif defined(HAS_UTIME)
+
+#include <sys/types.h>
+#ifndef _WIN32
+#include <utime.h>
+#else
+#include <sys/utime.h>
+#endif
+
+CAMLprim value unix_utimes(value path, value atime, value mtime)
+{
+  CAMLparam3(path, atime, mtime);
+  struct utimbuf times, * t;
+  char * p;
+  int ret;
+  double at, mt;
+  caml_unix_check_path(path, "utimes");
+  at = Double_val(atime);
+  mt = Double_val(mtime);
+  if (at == 0.0 && mt == 0.0) {
+    t = (struct utimbuf *) NULL;
+  } else {    
+    times.actime = at;
+    times.modtime = mt;
+    t = &times;
+  }
+  p = caml_strdup(String_val(path));
+  caml_enter_blocking_section();
+  ret = utime(p, t);
   caml_leave_blocking_section();
   caml_stat_free(p);
   if (ret == -1) uerror("utimes", path);
@@ -88,4 +91,4 @@ CAMLprim value unix_utimes(value path, value atime, value mtime)
 { invalid_argument("utimes not implemented"); }
 
 #endif
-#endif
+
